# aurora

./: Cargo.toml  LICENSE  README.md  restart-aurora.ps1
.github/workflows/: ci.yml
resources/: default_config.kdl
src/: content.rs  lib.rs  main.rs
src/apply/: mod.rs
src/config/: mod.rs  parse.rs  types.rs
src/decode/: mod.rs
src/hooks/: mod.rs
src/index/: mod.rs
src/integrations/: mod.rs  wiri.rs
src/ipc/: messages.rs  mod.rs  server.rs
src/metrics/: mod.rs
src/playlist/: mod.rs
src/runtime/: mod.rs
src/scheduler/: mod.rs
src/transition/: cpu.rs  gpu.rs  mod.rs
