[package]
name = "aurora"
version = "0.1.0"
edition = "2021"
description = "Efficient desktop background swapper for Windows with IPC and multi-monitor support"
license = "MIT"
authors = ["jolionlands"]

[[bin]]
name = "aurora"
path = "src/main.rs"

[[bin]]
name = "aurora-ctl"
path = "src/bin/ctl.rs"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.40", features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
image = { version = "0.25.10", default-features = false, features = ["jpeg", "png", "gif", "webp", "tiff", "bmp", "ico"] }
rand = "0.8"
blake3 = "1.5"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Imaging",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Pipes",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_SystemInformation",
    "Win32_System_Registry",
    "Win32_System_RemoteDesktop",
    "Win32_System_Threading",
    "Win32_Storage_FileSystem",
    "Win32_Networking_WinHttp",
] }

[dev-dependencies]
tempfile = "3.10"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
